corregida parte faltante en github

--- a/frontend/src/locales/fr.json
+++ b/frontend/src/locales/fr.json
@@ -3,7 +3,7 @@
         "forget_pass": "Mot de passe oublié",
         "no_account": "Vous n'avez pas de compte ?",
         "enter": "Entrer",
-        "subtitle" : "Entrez dans la prochaine dimension de Pong, entièrement immersive, rapide et en 3D époustouflante !",
+        "subtitle" : "Entrez dans la prochaine dimension de Pong, totalement immersif, rapide et en 3D époustouflante !",
         "placehold_username" : "Entrez votre nom d'utilisateur",
         "placehold_password" : "Entrez votre mot de passe"
     },
@@ -17,11 +17,8 @@
         "losses": "Défaites",
         "win_rate": "Taux de victoire",
         "detail": "Détail",
-        "match_details": "Détails du match",
-        "no_matches": "Aucun match joué pour le moment",
-        "no_win": "Aucune victoire trouvée",
-        "no_lost": "Aucune défaite trouvée",
-        "no_found": "Aucun match trouvé"
+        "match_details": "détails du match",
+        "no_matches": "Aucun match joué pour l'instant"
     },
     "general": {
         "username": "Nom d'utilisateur",
@@ -29,41 +26,33 @@
         "register": "S'inscrire",
         "login": "Connexion",
         "name": "Prénom",
-        "lastname": "Nom de famille",
+        "lastname": "Nom",
         "confirm_pass": "Confirmer le mot de passe",
-        "email": "E-mail",
-        "username_tournament": "Nom d'utilisateur du tournoi",
+        "email": "Email",
+        "username_tournament": "Nom d'utilisateur pour le tournoi",
         "picprofile": "Image de profil",
-        "enter_email" : "Entrez l'email",
+        "enter_email" : "Entrez votre email",
         "game_explain": "Invitez votre ami à rejoindre ! Utilisez ce code de match",
         "score": "Score",
         "waiting": "En attente de joueurs...",
         "edit_profile": "Modifier le profil",
-        "user_profile": "Profil utilisateur",
+        "user_profile": "Profil de l'utilisateur",
         "language": "Langue",
-        "close": "fermer",
-        "alert": "PROCHAIN MATCH",
-        "alert_text": "Vous avez un match à venir"
+        "close": "Fermer",
+        "alert": "Prochain match",
+        "alert_text": "Vous avez un jeu à jouer"
     },
     "friends": {
         "friends_title": "Mes amis",
         "placeholder_search": "Rechercher des amis",
-        "requests_title": "Demandes d'amis",
-        "add": "Ajouter un ami",
-        "name": "Nom de l'ami",
-        "no_request": "Aucune demande d'ami",
-        "accept": "Accepter",
-        "decline": "Refuser",
-        "request": "Demandes d'amis",
-        "no_friend_found": "Aucun ami trouvé",
-        "my_friend": "Mes amis"
+        "requests_title": "Demandes d'amis"
     },
     "tournaments": {
         "create_tournament": "Créer un tournoi",
         "tournament_name": "Nom du tournoi",
         "placehold_name": "Entrez le nom du tournoi",
         "tournament_date": "Date de début",
-        "max_goals": "Nombre de buts maximum",
+        "max_goals": "Nombre maximum de buts",
         "speed": "Vitesse",
         "add_player": "Ajouter un joueur",
         "placehold_playername": "Entrez le nom du joueur",
@@ -71,19 +60,13 @@
         "create": "Créer",
         "your_tournaments": "Vos tournois",
         "upcoming": "Matchs de tournoi à venir",
-        "check_list": "Consultez le calendrier de vos prochains matchs et restez prêt.",
-        "round": "Manche",
+        "check_list": "Consultez le calendrier de vos matchs à venir et restez prêt.",
+        "round": "Tour",
         "pending_tournaments": "Tournois en attente",
-        "check_inv": "Examinez et acceptez les invitations à rejoindre des tournois.",
+        "check_inv": "Vérifiez et acceptez les invitations pour rejoindre les tournois.",
         "winner": "Gagnant",
         "second": "Deuxième",
-        "third": "Troisième",
-        "manage": "Gérez vos tournois",
-        "start_your": "démarrez vos tournois créés",
-        "start": "démarrer",
-        "no_created": "Aucun tournoi créé pour le moment",
-        "no_matches": "Aucun match à jouer dans le futur !",
-        "no_invitations": "Aucune invitation pour jouer un tournoi"
+        "third": "Troisième"
     },
     "listtournaments": {
         "loading_tournaments": "Chargement des tournois",
@@ -97,14 +80,14 @@
         "explain_simple_match": "Jouez en ligne contre un joueur aléatoire",
         "friend_match": "Match entre amis",
         "explain_friend_match": "Rejoignez ou créez un match avec un ami",
-        "join": "rejoindre",
+        "join": "Rejoindre",
         "tournament": "Tournoi",
         "explain_tournament": "Créez un tournoi pour 16 joueurs"
     },
     "not_found": {
-        "not_found": "Non trouvé",
-        "explain_not_found": "La page que vous cherchez est introuvable.",
-        "go_back" : "Retour",
+        "not_found": "Introuvable",
+        "explain_not_found": "La page que vous recherchez est introuvable.",
+        "go_back" : "Retourner",
         "go_home" : "Accueil"
     },
     "message": {
@@ -113,7 +96,7 @@
             "home": "Accueil",
             "login": "Connexion",
             "logout": "Déconnexion",
-            "register": "S'inscrire",
+            "register": "Inscription",
             "games": "Jeux",
             "settings": "Paramètres",
             "language": "Langue",
@@ -124,14 +107,14 @@
             "stats": "Statistiques",
             "listTournaments": "Mes tournois"
         },
-        "email": "E-mail",
-        "reset_pass": "Restaurer votre mot de passe",
+        "email": "Email",
+        "reset_pass": "Réinitialisez votre mot de passe",
         "name_placeholder": "prénom",
         "lastname_placeholder": "nom",
         "username_placeholder": "nom d'utilisateur",
         "password_placeholder": "mot de passe",
         "confirm_pass_placeholder": "confirmer le mot de passe",
-        "logout": "Se déconnecter",
+        "logout": "Déconnexion",
         "gamestats": "Statistiques de jeu"
     }
 }
